--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,7 +11,13 @@ tasks:
   - name: react-js
     command: |
       cd frontend-react-js
-      npm i    
+      npm i   
+  - name: postgres
+    init: |
+      curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc|sudo gpg --dearmor -o /etc/apt/trusted.gpg.d/postgresql.gpg
+      echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" |sudo tee  /etc/apt/sources.list.d/pgdg.list
+      sudo apt update
+      sudo apt install -y postgresql-client-13 libpq-dev       
   
 vscode:
   extensions:
