--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -20,7 +20,7 @@ tasks:
       sudo apt install -y postgresql-client-13 libpq-dev       
     command: |
       export GITPOD_IP=$(curl ifconfig.me)
-      source $THEIA_WORKSPACE_ROOT/backend-flask/bin/rds-update-sg-rule
+      $THEIA_WORKSPACE_ROOT/backend-flask/bin/rds-update-sg-rule
 
 vscode:
   extensions:
